Dockerfile for custom service images for production